made ul li into flex items to hopefully fix mobile web not stacking the nav bar and added margin/padding 0 to body hopefully fix whitespace at bottom and top of white space

--- a/homestyle.css
+++ b/homestyle.css
@@ -11,6 +11,8 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position:center;
+  margin:0;
+  padding:0;
 }
 
 
@@ -38,6 +40,7 @@ ul li a {
 
 ul li a:hover {
   background-color: #ffffff23;
+  display:flex;
 }
 
 
